--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2983,7 +2983,9 @@
     }
 
                                             function getCommonWindows(qthLoc, dxLoc, dateStr) {
-                                                if (!qthLoc || !dxLoc || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
+                                                if (!qthLoc || !dxLoc ||
+                                                    !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) ||
+                                                    !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
                                                     return [];
                                                 }
 
@@ -2992,11 +2994,15 @@
 
                                                 const qthObs = new Astronomy.Observer(qth.lat, qth.lon, 0);
                                                 const dxObs  = new Astronomy.Observer(dx.lat,  dx.lon,  0);
-                                                const time   = Astronomy.MakeTime(new Date(`${dateStr}T00:00:00Z`));
 
-                                                let qthRise, qthSet, dxRise, dxSet;
+                                                // Start search from noon UTC of selected day → better for crossing midnight
+                                                const searchStart = new Date(`${dateStr}T12:00:00Z`);
+                                                const time = Astronomy.MakeTime(searchStart);
+
+                                                let qthRise = null, qthSet = null, dxRise = null, dxSet = null;
+
                                                 try {
-                                                    const qr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 2.0); // search ±2 days
+                                                    const qr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 2.0);
                                                     const qs = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, -1, time, 2.0);
                                                     const dr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  +1, time, 2.0);
                                                     const ds = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  -1, time, 2.0);
@@ -3005,31 +3011,29 @@
                                                     qthSet  = qs?.date;
                                                     dxRise  = dr?.date;
                                                     dxSet   = ds?.date;
-                                                } catch(e) {
+                                                } catch (e) {
                                                     console.warn("Rise/set search failed:", e);
                                                     return [];
                                                 }
 
                                                 const windows = [];
 
-                                                // Helper: convert Date to minutes since start of selected day
-                                                const dayStart = new Date(`${dateStr}T00:00:00Z`).getTime();
-                                                const toMinutes = d => (d.getTime() - dayStart) / (1000 * 60);
-
-                                                // Find overlapping interval between the two stations' moon visibility
                                                 if (qthRise && qthSet && dxRise && dxSet) {
-                                                    // Latest rise and earliest set define the common window
+                                                    // Find the latest rise and earliest set
                                                     const commonStart = new Date(Math.max(qthRise.getTime(), dxRise.getTime()));
                                                     const commonEnd   = new Date(Math.min(qthSet.getTime(),  dxSet.getTime()));
 
-                                                    // Only add if start < end and overlaps with the selected 24h period at all
+                                                    // Only accept if there's actual overlap
                                                     if (commonStart < commonEnd) {
-                                                        const winStartMin = toMinutes(commonStart);
-                                                        const winEndMin   = toMinutes(commonEnd);
-                                                        const dayStartMin = 0;
-                                                        const dayEndMin   = 24 * 60;
+                                                        // Check if this window overlaps with the 48-hour period around the selected day
+                                                        const dayStart = new Date(`${dateStr}T00:00:00Z`).getTime();
+                                                        const dayEnd   = dayStart + 24 * 60 * 60 * 1000;
 
-                                                        if (winEndMin > dayStartMin && winStartMin < dayEndMin) {
+                                                        const winStart = commonStart.getTime();
+                                                        const winEnd   = commonEnd.getTime();
+
+                                                        // If any part of the window falls within [dayStart, dayEnd), include it
+                                                        if (winEnd > dayStart && winStart < dayEnd) {
                                                             windows.push({ start: commonStart, end: commonEnd });
                                                         }
                                                     }
