--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2983,7 +2983,9 @@
     }
 
                                             function getCommonWindows(qthLoc, dxLoc, dateStr) {
-                                                if (!qthLoc || !dxLoc || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
+                                                if (!qthLoc || !dxLoc ||
+                                                    !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) ||
+                                                    !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
                                                     return [];
                                                 }
 
@@ -2994,45 +2996,49 @@
                                                 const dxObs  = new Astronomy.Observer(dx.lat,  dx.lon,  0);
                                                 const time   = Astronomy.MakeTime(new Date(`${dateStr}T00:00:00Z`));
 
-                                                let qthRise, qthSet, dxRise, dxSet;
-                                                try {
-                                                    const qr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 2.0); // search ±2 days
-                                                    const qs = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, -1, time, 2.0);
-                                                    const dr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  +1, time, 2.0);
-                                                    const ds = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  -1, time, 2.0);
+                                                let qthRise = null, qthSet = null, dxRise = null, dxSet = null;
 
-                                                    qthRise = qr?.date;
-                                                    qthSet  = qs?.date;
-                                                    dxRise  = dr?.date;
-                                                    dxSet   = ds?.date;
-                                                } catch(e) {
+                                                try {
+                                                    // Search ±2 days to be safe
+                                                    qthRise = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 2.0)?.date;
+                                                    qthSet  = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, -1, time, 2.0)?.date;
+                                                    dxRise  = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  +1, time, 2.0)?.date;
+                                                    dxSet   = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  -1, time, 2.0)?.date;
+                                                } catch (e) {
                                                     console.warn("Rise/set search failed:", e);
                                                     return [];
                                                 }
 
-                                                const windows = [];
+                                                if (!qthRise || !qthSet || !dxRise || !dxSet) return [];
 
-                                                // Helper: convert Date to minutes since start of selected day
                                                 const dayStart = new Date(`${dateStr}T00:00:00Z`).getTime();
-                                                const toMinutes = d => (d.getTime() - dayStart) / (1000 * 60);
+                                                const dayEnd   = dayStart + 24 * 60 * 60 * 1000;
 
-                                                // Find overlapping interval between the two stations' moon visibility
-                                                if (qthRise && qthSet && dxRise && dxSet) {
-                                                    // Latest rise and earliest set define the common window
-                                                    const commonStart = new Date(Math.max(qthRise.getTime(), dxRise.getTime()));
-                                                    const commonEnd   = new Date(Math.min(qthSet.getTime(),  dxSet.getTime()));
+                                                // Helper: does this moon-up period overlap with our 24 h window?
+                                                const overlapsDay = (rise, set) => {
+                                                    return rise.getTime() < dayEnd && set.getTime() > dayStart;
+                                                };
 
-                                                    // Only add if start < end and overlaps with the selected 24h period at all
-                                                    if (commonStart < commonEnd) {
-                                                        const winStartMin = toMinutes(commonStart);
-                                                        const winEndMin   = toMinutes(commonEnd);
-                                                        const dayStartMin = 0;
-                                                        const dayEndMin   = 48 * 60;
+                                                // Use the moon-up periods that actually overlap the selected day
+                                                let commonStart = null;
+                                                let commonEnd   = null;
 
-                                                        if (winEndMin > dayStartMin && winStartMin < dayEndMin) {
-                                                            windows.push({ start: commonStart, end: commonEnd });
-                                                        }
+                                                if (overlapsDay(qthRise, qthSet) && overlapsDay(dxRise, dxSet)) {
+                                                    // Latest rise and earliest set → common window
+                                                    commonStart = new Date(Math.max(qthRise.getTime(), dxRise.getTime()));
+                                                    commonEnd   = new Date(Math.min(qthSet.getTime(),  dxSet.getTime()));
+
+                                                    ));
+
+                                                    // Final sanity check
+                                                    if (commonStart >= commonEnd) {
+                                                        commonStart = commonEnd = null;
                                                     }
+                                                }
+
+                                                const windows = [];
+                                                if (commonStart && commonEnd) {
+                                                    windows.push({ start: commonStart, end: commonEnd });
                                                 }
 
                                                 return windows;
