--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3000,9 +3000,13 @@
 
                                                 try {
                                                     qthRise = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 2.0)?.date;
+                                                    console.log(qthRise);
                                                     qthSet  = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, -1, time, 2.0)?.date;
+                                                    console.log(qthSet);
                                                     dxRise  = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  +1, time, 2.0)?.date;
+                                                    console.log(dxRise);
                                                     dxSet   = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  -1, time, 2.0)?.date;
+                                                    console.log(dxSet);
                                                 } catch (e) {
                                                     console.warn("Rise/set search failed:", e);
                                                     return [];
